# binary_image

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: bevy.rs  lib.rs  neigbors.rs  pixel.rs  utils.rs  view.rs
src/tests/: mod.rs  pixel.rs
src/view/: mod.rs  raw.rs
