[package]
name = "binary_image"
version = "0.7.1"
edition = "2021"
description = "A library for handling binary images"
authors = ["salam99823"]
keywords = ["image", "bit", "bitmap"]
homepage = "https://github.com/salam99823/binary_image"
repository = "https://github.com/salam99823/binary_image"
readme = "README.md"
license = "MIT OR Apache-2.0"

exclude = ["assets/*", ".github/*", "examples/*"]
include = ["/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/"]

[lints.clippy]
pedantic = { level = "warn", priority = 0 }

[features]
default = []
bevy = ["dep:bevy_image", "dep:bevy_render"]

[dependencies]
image = { version = "0.25", default-features = false }
derive_more = { version = "1", features = ["full"] }
num-traits = "0.2"
bit-vec = { version = "0.8" }

[dependencies.bevy_image]
version = "0.15"
default-features = false
optional = true

[dependencies.bevy_render]
version = "0.15"
default-features = false
optional = true

[dev-dependencies.bevy_image]
version = "0.15"
default-features = false
features = ["png"]
